--- a/components/maintenance/unit.jade
+++ b/components/maintenance/unit.jade
@@ -7,7 +7,7 @@ template(name='unit')
                 |#{unit.building_code}
             .ui.header
                 //- i.home.icon 
-                +i name='apartment'
+                +i name='room'
                 small unit
                 strong #{unit.unit_number}
             .ui.header 
