--- a/components/profile/profile.jade
+++ b/components/profile/profile.jade
@@ -18,7 +18,6 @@ template(name='user_layout')
                     else
                         if is_current_user
                             +image_edit key='profile_photo' label='profile photo' direct=true
-                            
                     .ui.center.aligned.basic.segment
                         a(href="/user/#{user.username}")
                             h1.ui.large.center.aligned.header
@@ -34,7 +33,6 @@ template(name='user_layout')
                             +staff_verification
                         else 
                             .ui.small.header #{tagline}
-                
                     if is_current_user
                         a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
                             +i name='settings' classes='ui inline mini image'
@@ -66,7 +64,7 @@ template(name='user_layout')
                             a.ui.button(href="/user/#{username}/healthclub" class="{{isActiveRoute 'user_healthclub'}}")
                                 +ismall name='treadmill' classes='ui inline image'
                                 |healthclub
-                    if user_is_resident_or_owner
+                    if is_resident
                         a.ui.compact.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
                             +ismall name='dashboard' classes='ui inline image'
                             |dashboard
@@ -176,15 +174,15 @@ template(name='user_residency')
         if is_admin
             +text_view key='address' label='address' direct=true
         //- +text_view key='email' label='Email' direct=true
-        +phone_view key='phone' label='phone' direct=true
+        +phone_view key='phone' label='phone' icon='phone' direct=true
         if user_is_resident
             //- if is_staff
             +number_view key='unit_number' label='unit #' direct=true
             +number_view key='building_number' label='building #' direct=true
             +number_view key='healthclub_code' label='healthclub_code' direct=true
             +text_view key='building_code' label='building code' direct=true
-            +date_view key='start_date' label='start date' direct=true
-            +date_view key='expiration_date' label='expiration date' direct=true
+            +date_view key='start_date' label='start date' icon='overtime' direct=true
+            +date_view key='expiration_date' icon='calendar-minus' label='lease expires' direct=true
         +textarea_view key='notes' label='notes' icon='align-left' direct=true
         each emails
             .ui.label #{address}
@@ -250,11 +248,11 @@ template(name='resident_info')
         if is_admin
             +text_view key='address' label='address' direct=true
         //- +text_view key='email' label='Email' direct=true
-        +phone_view key='phone' label='phone' direct=true
+        +phone_view key='phone' label='phone' icon='phone' direct=true
         if user_is_resident
             //- if is_staff
-            +number_view key='unit_number' label='unit #' direct=true
-            +number_view key='building_number' label='building #' direct=true
+            +number_view key='unit_number' icon='room' label='unit #' direct=true
+            +number_view key='building_number' icon='building' label='building #' direct=true
             +number_view key='healthclub_code' label='healthclub code' direct=true
             +text_view key='building_code' label='building code' direct=true
             +date_view key='start_date' label='start date' direct=true
@@ -263,9 +261,9 @@ template(name='resident_info')
         div
         each emails
             if verified
-                .ui.green.label(title='verified') #{address}
+                .ui.green.large.label(title='verified') #{address}
             else
-                .ui.orange.label(title='unverified') #{address}
+                .ui.orange.large.label(title='unverified') #{address}
 
     
             
