--- a/components/work.jade
+++ b/components/work.jade
@@ -12,8 +12,8 @@ template(name='work')
                 .ui.icon.button.recalc_work(title='recalculate')
                     i.refresh.icon
             .four.wide.column   
-                .ui.icon.button.add_work
-                    i.large.plus.icon
+                .ui.icon.big.button.add_work
+                    i.large.plus.green.icon
                     //- |work
         .four.column.row
             .column
@@ -23,18 +23,57 @@ template(name='work')
             //- .column
             //-     +my_building_work
             .column
-                +highest_offer
+                +highest_bounty
             .column
                 +latest_work
             .column
                 +most_viewed_work
+
+        .four.column.row
+            .column
+                +my_projects
+            //- .column
+            //-     +my_unit_work
+            //- .column
+            //-     +my_building_work
+            .column
+                +latest_work_log_entries
+            .column
+                +latest_work_comments
+            .column
+                +upcoming_due_dates
+
+
+template(name='my_projects')
+    +ismall name='project'
+    .ui.inline.header 
+        |my projects
+    
+
+template(name='latest_work_comments')
+    +ismall name='comments'
+    .ui.inline.header 
+        |latest work comments
+    
+
+template(name='latest_work_log_entries')
+    +ismall name='news'
+    .ui.inline.header
+        |latest work log entries
+    
+
+template(name='upcoming_due_dates')
+    +ismall name='clock'
+    .ui.inline.header 
+        |upcoming due dates
+    
 
 
 template(name='my_assignments')
     .ui.header 
         +i name='user-male'
         |my assignments
-    .ui.animated.list
+    .ui.list
         each my_assigments
             +work_item
         
@@ -42,7 +81,7 @@ template(name='my_unit_work')
     .ui.header 
         +i name='room'
         |my unit work
-    .ui.animated.list
+    .ui.list
         each my_unit_work
             +work_item
         
@@ -51,7 +90,7 @@ template(name='all_work')
     .ui.header 
         +i name='work'
         |work
-    .ui.animated.list
+    .ui.list
         each all_work
             +work_item
         
@@ -60,24 +99,23 @@ template(name='latest_work')
     .ui.header 
         +i name='work'
         |latest
-    .ui.animated.list
+    .ui.list
         each latest_work
             +work_item
         
-template(name='highest_offer')
+template(name='highest_bounty')
     .ui.header 
         +i name='money'
-        |highest offer
-    .ui.animated.list
-        each offers
+        |highest bounty
+    .ui.list
+        each work_with_bounty
             +work_item
-        
         
 template(name='most_viewed_work')
     .ui.header 
-        +i name='work'
+        +i name='podium-with-audience'
         |most viewed
-    .ui.animated.list
+    .ui.list
         each most_viewed
             +work_item
         
@@ -86,7 +124,7 @@ template(name='my_building_work')
     .ui.header 
         +i name='building'
         |building #{my_building.code} work
-    .ui.animated.list
+    .ui.list
         each my_building_work
             +work_item
 
@@ -104,7 +142,10 @@ template(name='work_item')
                 .ui.label(title="assigned to #{assigned_to_username}")
                     i.right.chevron.icon
                     |#{assigned_to_username}
-    
+            if bounty
+                span(title='bounty')
+                    i.grey.money.icon
+                    |#{bounty_amount}
 
 
 
@@ -115,28 +156,66 @@ template(name='work_edit')
                 .column 
                     .ui.header 
                         i.pencil.icon
-                        |edit work
-                    a.ui.big.icon.fluid.button(href="/work/#{_id}/view" title='save')
-                        i.green.checkmark.icon
+                        |edit work '#{title}'
+                    a.ui.big.fluid.button(href="/work/#{_id}/view" title='save')
+                        i.green.checkmark.green.large.icon
+                        |save
                     +remove_button
-                    +number_edit key='unit_number' icon='room' label='unit number' direct=true
-                    +number_edit key='building_number' icon='building' label='building number' direct=true
+                    +boolean_edit key='residence' icon='room' direct=true
+                        if residence
+                            +number_edit key='unit_number' icon='room' label='unit number' direct=true
+                            +number_edit key='building_number' icon='building' label='building number' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                    +boolean_edit key='need_to_schedule' label='need to schedule' direct=true
-                    +single_user_edit key='reported_by' label='reported by' direct=true
+                    +boolean_edit key='need_to_schedule' icon='clock' label='need to schedule' direct=true
+                    +multi_doc_edit key='view_roles' ref_model='role' label='visible to' direct=true
+                    +multi_doc_edit key='acceptance_roles' ref_model='role' label='acceptable roles' direct=true
                 .column 
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
+                    .ui.header
+                        +i name='calendar'
+                        |due date
+                    .ui.header
+                        +i name='calendar'
+                        |completion date
+                    .ui.header
+                        +i name='calendar'
+                        |start date
+                    +boolean_edit key='has_hourly_rate' label='hourly rate' icon='money' direct=true
+                    if has_hourly_rate
+                        +float_edit key='hourly_rate_amount' label='hourly rate amount' direct=true
+                    .ui.dividing.header 
+                        +ismall name='clock'
+                        |time
+                    +boolean_edit key='duration' label='duration' direct=true
+                    if duration
+                        +float_edit key='duration_hours' label='hours' direct=true
+                        +date_edit key='start_date' label='start date' direct=true
+                        +time_edit key='start_time' label='start time' direct=true
+                        +date_edit key='end_date' label='end date' direct=true
+                        +time_edit key='end_time' label='end time' direct=true
                 .column 
-                    +single_user_edit key='assigned_to_username' label='assigned to' direct=true
-                    .ui.header stats
-                    .ui.small.header #{views} views
-                    .ui.small.header #{points} points
-                    .ui.header status
-                    .ui.small.header status: #{status}
-                    
+                    +single_user_edit key='reported_by' label='reported by' icon='group-task' direct=true
+                    +single_user_edit key='assigned_to_username' icon='checked-user-male' label='assigned to' direct=true
+                    +boolean_edit key='requires_verification' icon='approval' label='requires verification' direct=true
+                    if requires_verification
+                        +single_user_edit key='verification_required_by_username' label='verification required by' direct=true
+                    +boolean_edit key='approval_required' icon='approval' label='requires verification' direct=true
+                    if approval_required
+                        +single_user_edit key='approval_required_by_username' label='approval required by' direct=true
+                    +boolean_edit key='open_assignment' label='open assignment' direct=true
+                        if open_assignment
+                            +text_edit key='open_assignment_notes' label='open assignment notes'
+                    +boolean_edit key='bounty' label='bounty' icon='donate' direct=true
+                    if bounty
+                        +text_edit key='bounty_description' label='bounty description' direct=true
+                        +number_edit key='bounty_amount' icon='coins' label='bounty amount' direct=true
+                    +boolean_edit key='request' label='request' direct=true
+                    if request
+                        div
+                        +single_user_edit key='request_username' direct=true
                      
 template(name='work_view')
     with current_doc
@@ -162,31 +241,61 @@ template(name='work_view')
                     each _timestamp_tags
                         .ui.basic.label #{this}
                     +viewing
-                .column 
-                    +number_view key='unit_number' label='unit_number' direct=true
-                    +number_view key='building_number' label='building_number' direct=true
-                    div
-                    +array_view key='tags' label='tags' icon='tags' direct=true
-                    div
-                    +boolean_view key='need_to_schedule' label='need to schedule' direct=true
-                    div
-                    +single_user_view key='reported_by' label='reported by' direct=true
-                    .large150
-                        +html_view key='description' icon='content' label='description' direct=true
-                    +image_view key='image' icon='image' label='image' direct=true
-                    +boolean_view key='published' label='published' direct=true
-                    +comments
-                .column
+                    +array_view key='view_roles' label='visible to' direct=true
+                    +array_view key='acceptance_roles' label='acceptable roles' direct=true
                     +single_user_view key='assigned_to_username' label='assigned to' icon='user-male' direct=true
+                    +single_user_view key='reported_by' label='reported by' icon='group-task' direct=true
+                    +boolean_view key='requires_verification' label='requires verification' direct=true
+                    if requires_verification
+                        +single_user_view key='verfication_required_by_username' label='verification required by' direct=true
+                    +boolean_view key='open_assignment' label='open assignment' direct=true
+                        if open_assignment
+                            +text_view key='open_assignment_notes' label='open assignment notes'
+                    +boolean_view key='bounty' label='bounty' direct=true
+                    if bounty
+                        +text_view key='bounty_description' label='bounty description' direct=true
+                        +number_view key='bounty_amount' label='bounty amount' direct=true
+                    +boolean_view key='request' label='request' direct=true
+                    if request
+                        div
+                        +text_view key='request_description' label='request description' direct=true
+                    +boolean_view key='bounty' label='bounty' direct=true
                     .ui.header 
                         +i name='line-chart'
                         |stats
                     .ui.small.header #{views} views
                     .ui.small.header #{points} points
                     .ui.small.header status: #{status}
-                    .ui.header 
-                        +i name='rss'
-                        |activity
-                    .ui.list
-                        each log_items
-                            .item #{text}
+                .column 
+                    +number_view key='unit_number' label='unit_number' direct=true
+                    +number_view key='building_number' label='building_number' direct=true
+                    div
+                    +array_view key='tags' label='tags' icon='tags' direct=true
+                    div
+                    +boolean_view key='need_to_schedule' icon='clock' label='need to schedule' direct=true
+                    .large150
+                        +html_view key='description' icon='content' label='description' direct=true
+                    +image_view key='image' icon='image' label='image' direct=true
+                    +boolean_view key='published' label='published' direct=true
+                
+                    +comments
+                .column
+                    +work_activity_full
+                    
+                    
+                    
+template(name='work_activity_full')                    
+    .ui.header 
+        +i name='rss'
+        |activity
+    .ui.feed
+        each work_activity
+            .event
+                .label
+                    img.ui.avatar.image(src="{{c.url author.kiosk_photo width=200 height=200 gravity='face' crop='fill'}}")
+                .content
+                    .summary 
+                        |#{text}
+                    .meta #{when}
+                        if is_admin
+                            +remove_button
