--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -15,7 +15,7 @@ template(name='healthclub')
         .row
             .sixteen.wide.center.aligned.column
                 .ui.massive.fluid.left.icon.input
-                    input.username_search(type='text' placeholder='resident first or last name' autofocus)
+                    input.username_search(type='text' placeholder='first or last name' autofocus)
                     if is_query
                         i.remove.link.icon.clear_results
                     else 
