--- a/client/chat.jade
+++ b/client/chat.jade
@@ -6,12 +6,12 @@ template(name='chat_messages_pane')
     if in_chat
         .ui.icon.fluid.attached.input
             i.chevron.right.icon
-            input.add_message(type='text' placeholder='Add Message...')
+            input.add_message(type='text' placeholder='add message...')
                 
 template(name='chat_list')
     div
     .ui.inline.header channels
-    .ui.icon.basic.button#create_chat(title='New Channel')
+    .ui.icon.basic.button#create_chat(title='new channel')
         i.plus.icon
 
     .ui.segments
@@ -100,14 +100,14 @@ template(name='chat_message')
             .actions
                 +voting_small
                 if is_author
-                    i.remove.link.icon.delete_message(title='Delete Message')
+                    i.remove.link.icon.delete_message(title='delete message')
                 else
                     if read
-                        i.envelope.open.outline.link.large.icon.mark_unread(title='Mark Unread')
+                        i.envelope.open.outline.link.large.icon.mark_unread(title='mark unread')
                     else
-                        i.mail.link.outline.large.icon.mark_read(title='Mark Read')
+                        i.mail.link.outline.large.icon.mark_read(title='mark read')
                 each readers
-                    .ui.tiny.label(title="Read by #{username}") #{username}
+                    .ui.tiny.label(title="read by #{username}") #{username}
                     // img.ui.avatar.image(src="{{c.url image_id width=50 height=50 gravity='face' crop='fill'}}")
                                                 
 
@@ -203,6 +203,6 @@ template(name='view_chat')
                     //- +resonates_list
                     if can_edit
                         +boolean_edit key='private' label='private' direct=true
-                    .ui.header Started by 
+                    .ui.header started by 
                         img.ui.avatar.image(src="{{c.url author.image_id width=400 height=400 gravity='face' crop='fill'}}")
                         |#{author.username} #{when}
