--- a/components/maintenance/signatures.jade
+++ b/components/maintenance/signatures.jade
@@ -51,7 +51,7 @@ template(name='rules_signing')
                     +signature_edit key='signature' direct=true
                 if signature_saved
                     .ui.big.green.fluid.button.submit_rules
-                        | submit signing
+                        .ui.inline.green.header submit signing
                         i.right.chevron.icon
                 .ui.hidden.divider
                 .ui.hidden.divider
@@ -117,8 +117,8 @@ template(name='add_guest')
                             +signature_edit key='signature' direct=true
                         if signature_saved
                             .ui.big.green.fluid.button.submit_guest
-                                | submit
-                                i.right.chevron.icon
+                                .ui.green.inline.header submit
+                                i.right.chevron.green.icon
                     .ui.hidden.divider
                     .ui.hidden.divider
                     .ui.hidden.divider
@@ -147,7 +147,7 @@ template(name='guidelines_signing')
             +document_view key='member_guidelines'
             +user_card resident
             .ui.small.header
-                +i name='reading-confirmation'
+                +i name='email'
                 |valid email address for receipt
             .ui.header #{resident_doc.username}
             +emails_edit    
@@ -188,7 +188,7 @@ template(name='guidelines_signing')
                     +signature_edit key='signature' direct=true
                 if signature_saved
                     .ui.big.green.fluid.button.submit_guidelines
-                        | submit signing
+                        .ui.inline.green.header  submit signing
                         i.right.chevron.icon
                 .ui.hidden.divider
                 .ui.hidden.divider
