beginning anon home approach, separate work_order crud

--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -40,7 +40,7 @@ template(name='login')
                         +i name='forgot-password' classes='ui mini inline image'                    
                         //- i.refresh.icon
                         |forgot password
-                .ui.center.aligned.header see the front desk about registering an account
+                .ui.center.aligned.header see the front desk to register an account
                     //- a.ui.large.basic.button(href='/register') 
                     //-     //- +i name='add-user-male' classes='ui mini inline image'                    
                     //-     i.user.plus.icon
