--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,9 @@ template(name='nav')
                     i.big.spinning.yin.yang.grey.cancel.icon
             else
                 unless is_staff
-                    a.ui.item(href='/' class="{{isActivePath '/'}}")
-                        //- .ui.header GRO
+                    a.ui.header.item(href='/' class="{{isActivePath '/'}}")
                         +i name='home' classes='ui mini inline image'  
+                        | gro
                         //- img.ui.mini.inline.centered.circular.image(src="{{c.url 'gold_run_logo' }}")
                 if is_resident
                     a.ui.item(href='/resident_portal' class="{{isActivePath '/resident_portal'}}" title='resident portal')
@@ -112,9 +112,9 @@ template(name='nav')
                         //- i.tasks.large.icon
                     //- a.ui.item(href='/tasks' class="{{isActivePath '/tasks'}}" title='tasks')
                     //-     i.tasks.large.icon
-                    a.ui.item(href='/inbox' class="{{isActivePath '/inbox'}}" title='inbox')
-                        +i name='inbox' classes='ui mini inline image'
-                        //- i.inbox.large.icon
+                    //- a.ui.item(href='/inbox' class="{{isActivePath '/inbox'}}" title='inbox')
+                    //-     +i name='inbox' classes='ui mini inline image'
+                    //-     //- i.inbox.large.icon
                     a.ui.item(href='/chat' class="{{isActivePath '/chat'}}" title='chat')
                         +i name='chat' classes='ui mini inline image'
                         //- i.chat.large.outline.icon
@@ -137,7 +137,7 @@ template(name='nav')
                 else
                     unless is_resident
                         a.ui.item(href='/login' title='login') 
-                            +i name='internal'
+                            +ismall name='internal' 
                             |login
                             //- .secnav
         //- .ui.attached.borderless.small.menu.topnav
@@ -157,30 +157,30 @@ template(name='footer')
             .four.wide.column
                 if currentUser 
                     +my_latest_activity
-                //- if is_staff
-                .ui.button.shortcut_modal
-                    i.keyboard.icon
-                    | keyboard shortcuts
+                if is_admin
+                    .ui.button.shortcut_modal
+                        i.keyboard.icon
+                        | keyboard shortcuts
                 //- +add_button label='+ bug' model='bug' icon='bug'
                 //- else
-                //- unless is_staff
-                //-     form.inline(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
-                //-         input(type='hidden', name='cmd', value='_s-xclick')
-                //-         input(type='hidden', name='hosted_button_id', value='BUX7ZDWUFLVDQ')
-                //-         //- // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
-                //-         //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                //-         img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
-                //-         button.ui.button(type='submit' title='donate')
-                //-             +i name='donate' classes='ui inline mini image'
-                //-             |donate
+                unless is_staff
+                    form.inline(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
+                        input(type='hidden', name='cmd', value='_s-xclick')
+                        input(type='hidden', name='hosted_button_id', value='BUX7ZDWUFLVDQ')
+                        //- // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
+                        //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
+                        button.ui.icon.button(type='submit' title='donate')
+                            +i name='donate' classes='ui inline mini image'
+                            //- |donate
                 if is_dev    
                     with current_user
                         +role_switcher
             .four.wide.column
-                unless currentUser
-                    a.ui.big.basic.button(href='/login')
-                        i.sign.in.icon
-                        |login
+                //- unless currentUser
+                //-     a.ui.big.basic.button(href='/login')
+                //-         i.sign.in.icon
+                //-         |login
                 if is_eric
                     with currentUser
                         +role_switcher
